--- a/styles/style.css
+++ b/styles/style.css
@@ -6,20 +6,29 @@ body{
     font-family: 'Poppins', sans-serif;
     background-color: #f3f1ff;
 }
+.top-players{
+    margin-bottom: 30px;
+}
 .section-title{
     color: #562EFF;
     font-size: 24px;
+    margin-top: 3px;
 
 
 }
 main{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container{
     background-color: white;
     width: 870px;
+    padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 
 
@@ -28,6 +37,7 @@ main{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     /* grid-template-columns: 1fr,1fr,1fr; */
+    grid-row-gap: 30px;
 }
 .player{
     display: flex;
@@ -37,3 +47,49 @@ main{
     width: 56px;
     height: 56px;
 }
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
+}
+hr{
+    border: 1px solid #d1d1d1;
+    margin-bottom: 27px;
+}
+
+
+
+/* -------------------------------------------------------------------------------------------- */
+/* top blog styles */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+    padding-right: 15px;
+}
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    text-decoration: none;
+    color: #562EFF;
+}
+
+
+
+
+
+
