--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,39 @@ hr{
 
 
 
+/* ====================================== */
+/* courses styles */
+/* ========================================= */
+
+.course .course-banner img{
+    height: 104px;
+    width: 224px;
+
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #aeaeae;
+}
+
+.course-info{
+    display: flex;
+}
+
+
+
+
+
+
+
+
+
+
+
 /* -------------------------------------------------------------------------------------------- */
 /* top blog styles */
 .blogs{
